# dashl

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  Stylesheets.elm  elm-package.json  index.html  package.json
css/: dashboard.css
elm/: Dashboard.elm  Main.elm  Model.elm
elm/Timer/: Init.elm  Subscriptions.elm  View.elm
elm/Weather/: Init.elm  Subscriptions.elm  Types.elm  Update.elm
js/: config.sample.js  config.sample.json  dashboard.js
src/: Countdown.elm  CssMain.elm  Dashboard.elm  Main.elm  Model.elm  Msg.elm  Timer.elm  Update.elm  Weather.elm  main.rs
src/timer/: Types.elm  Update.elm
src/weather/: Init.elm  Subscriptions.elm  Types.elm  Update.elm  View.elm
systemd/: dashl.service  screen-off.service  screen-off.timer  screen-on.service  screen-on.timer
templates/: index.html
