[package]
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>"]
name = "dashl"
version = "0.0.0"
build = "build.rs"

[build-dependencies]
askama = "0.3.2"

[dependencies]
askama = "0.3.2"
futures = "0.1.11"
serde = "0.9.11"
serde_derive = "0.9.11"
serde_json = "0.9.9"

[dependencies.hyper]
git = "https://github.com/hyperium/hyper.git"
rev = "3da720a99fab9cf6ecf8a206bb22c826ebb74992"
