[package]
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>"]
name = "dashl"
version = "0.0.0"

[dependencies]
futures = "0.1.21"
hyper = { git = "https://github.com/hyperium/hyper.git" }
hyper-tls = { git = "https://github.com/hyperium/hyper-tls.git" }
serde = "1.0.52"
serde_derive = "1.0.52"
serde_json = "1.0.17"
